# Guindex

./: .gitignore  .gitmodules  Guindex.spec  MANIFEST.in  Makefile.am  README.md  autogen.sh  build_guindex_rpm.sh.in  configure.ac  get-pip.py  requirements.txt  setup.py.in
GuindexProject/: Makefile.am  manage.py
GuindexProject/Guindex/: GuindexAlertsClient.py  GuindexAlertsIf.proto  GuindexAlertsServer.py  GuindexBot.py  GuindexClient.py  GuindexParameters.py  GuindexStatsClient.py  GuindexStatsIf.proto  GuindexStatsServer.py  GuindexUtils.py  Makefile.am  __init__.py  apps.py  authentication.py  exceptions.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
GuindexProject/Guindex/client_scripts/: guindex_client_examples.txt
GuindexProject/Guindex/http_api_scripts/: most_expensive.py
GuindexProject/Guindex/migrations/: 0001_initial.py  0002_auto_20171214_2035.py  0002_auto_20171226_1234.py  0002_auto_20180113_1009.py  0003_auto_20171214_2146.py  0003_auto_20171226_1239.py  (+53 more)
GuindexProject/GuindexDashboard/: apps.py  urls.py
GuindexProject/GuindexProject/: settings.py  urls.py  wsgi.py
GuindexProject/GuindexUser/: GuindexUserUtils.py  apps.py  models.py  serializers.py  urls.py  views.py
GuindexProject/GuindexWebClient/: Makefile.am  apps.py  urls.py  views.py
GuindexProject/TelegramUser/: TelegramBot.py  TelegramUserParameters.py  TelegramUserUtils.py  models.py  urls.py  views.py
GuindexProject/TopLevel/: apps.py  urls.py  views.py
GuindexProject/UserProfile/: serializers.py  urls.py  views.py
rpmbuild/SPECS/: Guindex.spec.in
(+178 files in other folders)
