# Process this file with autoconf to produce a configure script.
# TODO make this dynamic git version number

AC_INIT(GUINDEX, 0.1)

AM_INIT_AUTOMAKE([foreign])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT([Makefile
           build_guindex_rpm.sh
           setup.py
           rpmbuild/SPECS/Guindex.spec])
